--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -7,7 +7,8 @@
 {{{ style_sheet }}}
 </style>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<script src="https://rawgithub.com/quirkey/sammy/master/lib/sammy.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sammy.js/0.7.4/sammy.min.js"></script>
+
 <script>
 var data = {{{ json_data }}};
 var rel_path = "{{{ relative_path }}}"
