--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -1,10 +1,30 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>A title</title>
+<title>{{{ title }}}</title>
 <head>
 <style type="text/css">
 {{{ style_sheet }}}
+</style>
+<style>
+
+#main {
+  padding-top: 60px;
+}
+
+.date {
+    font-size: 24px;
+}
+
+.post-title {
+    font-size: 28px;
+    font-weight: bold;
+}
+
+body {
+    font-size: 22px;
+}
+
 </style>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sammy.js/0.7.4/sammy.min.js"></script>
@@ -18,6 +38,7 @@ var rel_path = "{{{ relative_path }}}"
 </script>
 </head>
 <body>
+<h2> {{{ title }}} </h2>
 <div id="main"></div>
 </body>
 </html>
