--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>{{{ title }}}</title>
+<title>{{ title }}</title>
 <head>
 <style type="text/css">
 {{{ style_sheet }}}
@@ -9,7 +9,7 @@
 <style>
 
 #main {
-  padding-top: 60px;
+  padding-bottom: 120px;
 }
 
 .date {
@@ -22,23 +22,24 @@
 }
 
 body {
-    font-size: 22px;
+    font-size: 1.5em;
 }
 
 </style>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sammy.js/0.7.4/sammy.min.js"></script>
 
 <script>
 var data = {{{ json_data }}};
-var rel_path = "{{{ relative_path }}}"
+var rel_path = "{{ relative_path }}"
 
 {{{ script }}}
 
 </script>
 </head>
 <body>
-<h2> {{{ title }}} </h2>
+<h1> {{ title }} </h1>
 <div id="main"></div>
 </body>
 </html>
