--- a/templates/post.mustache.haml
+++ b/templates/post.mustache.haml
@@ -1,5 +1,6 @@
 .post
-   = %h2 {{ title }} %i {{ author }}
-
-   .body
-   = {{{ body }}}
+    :markdown
+        ## {{ title }} _by_ {{ author }}
+    
+    .body
+        {{{ body }}}
