--- a/styles/post.scss
+++ b/styles/post.scss
@@ -1,13 +1,17 @@
-#main
+#main {
   padding-bottom: 120px
+}
 
-.date
+.date {
   font-size: 24px
+}
 
-.post-title
+.post-title {
   font-size: 28px
   font-weight: bold
+}
 
-body
+body {
   font-size: 1.5em
+}
 
