--- a/templates/index.mustache.html
+++ b/templates/index.mustache.html
@@ -12,7 +12,7 @@
 
 <script>
 var data = {{{ json_data }}};
-var rel_path = "{{ relative_path }}"
+var rel_path = "{{ relative_path }}";
 
 {{{ script }}}
 
