--- a/templates/recipes.mustache.haml
+++ b/templates/recipes.mustache.haml
@@ -1,6 +1,6 @@
 .post
   .body
      {{{ body }}}
-     {{#hello_world}}
-        {{name}}
-     {{/hello_world}}
+     {{#default_hello_world}}
+       reader
+     {{/default_hello_world}}
