working recipes again

--- a/templates/recipes.mustache.haml
+++ b/templates/recipes.mustache.haml
@@ -1,6 +1,6 @@
 .post
   .body
      {{{ body }}}
-     {{#default_hello_world}}
+     {{#hello_world}}
        reader
-     {{/default_hello_world}}
+     {{/hello_world}}
