updated github repo to facjure

--- a/templates/index.mustache.html
+++ b/templates/index.mustache.html
@@ -19,7 +19,7 @@ var rel_path = "{{ relative_path }}";
 </script>
 </head>
 <body>
-<h1><a href="http://priyatam.github.io/frozen-pie/">{{ title }} </a></h1>
+<h1><a href="https://github.com/Facjure/frozen-pie">{{ title }} </a></h1>
 <a href="https://github.com/priyatam/frozen-pie"><img height="30" src="http://octodex.github.com/images/original.png"/></a>
 <div id="main"></div>
 </body>
