--- a/templates/index.mustache.html
+++ b/templates/index.mustache.html
@@ -19,8 +19,11 @@ var rel_path = "{{ relative_path }}";
 </script>
 </head>
 <body>
-<h1><a href="https://github.com/Facjure/frozen-pie">{{ title }} </a></h1>
-<a href="https://github.com/priyatam/frozen-pie"><img height="30" src="http://octodex.github.com/images/original.png"/></a>
+<h1><a href="" + {{github_repo}} + "">{{ title }} </a></h1>
 <div id="main"></div>
+<footer>
+    <div align="center">
+    <a href="" + {{github_repo}} + ""><img height="30" src="http://octodex.github.com/images/original.png"/></a></div>
+</footer>
 </body>
 </html>
