removed haml cruft

--- a/templates/recipes.mustache.html
+++ b/templates/recipes.mustache.html
@@ -1,6 +1,9 @@
-.post
-  .body
+<div class='post'>
+  <div class='body'>
      {{{ body }}}
      {{#hello_world}}
        reader
      {{/hello_world}}
+
+  </div>
+</div>
