html5 tags pages support

--- a/templates/footer.mustache
+++ b/templates/footer.mustache
@@ -1,6 +1,7 @@
 <footer>
     <div align="center">
-    <a href="{{github_repo}}"><img height="40" src="http://octodex.github.com/images/original.png"/></a></div>
+        <a href="{{github_repo}}"><img height="40" src="http://octodex.github.com/images/original.png"/></a>
+    </div>
 </footer>
 </body>
 </html>
