--- a/templates/header.mustache
+++ b/templates/header.mustache
@@ -12,8 +12,7 @@
 
 <script>
 var data = {{{ json_data }}};
-var config = {{{ config }}}
-var rel_path = "{{ relative_path }}";
+var config = {{{ config }}};
 
 {{{ script }}}
 
