--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -1,12 +1,6 @@
 {{> header }}
-
-<h1><a href="{{github_repo}}">{{ title }} </a></h1>
-<div id="main">
-{{#posts }}
-    <span class="date"> {{ post_date }}&nbsp;&nbsp;</span>
-    <span><a href="#/{{ name }}"><span class="post-title">{{ title }}</a></span><br/>
-{{/posts}}
-</div>
-
+{{> nav }}
+<section id="main">
+</section>
 {{> footer }}
 
