--- a/templates/post_plain.mustache
+++ b/templates/post_plain.mustache
@@ -1,3 +1,3 @@
 <div class="post">
-  <h2>{{ title }} _by_ {{ author }}</h2>
+  <h2>{{ title }} <em>by</em> {{ author }}</h2>
   <div class="body" style="white-space: pre-wrap">{{{ body }}}</div>
