index.html now goes to .build #21 removed css glitch

--- a/recipe/templates/post_plain.mustache
+++ b/recipe/templates/post_plain.mustache
@@ -1,3 +1,4 @@
-<div class="post">
-  <h2>{{ title }} <em>by</em> {{ author }}</h2>
-  <div class="body" style="white-space: pre-wrap">{{{ body }}}</div>
+<header>
+    <h2>{{ title }} <em>by</em> {{ author }}</h2>
+</header>
+<article class='post' style="white-space: pre-wrap">{{{ body }}}</article>
