--- a/recipe/styles/custom.scss
+++ b/recipe/styles/custom.scss
@@ -10,8 +10,19 @@
     margin-top: 4em;
 }
 
+#main {
+    padding-bottom: 90px;
+}
+
 body {
-  font-size: 1.5em
+  margin:  0px 0px 0px 0px;
+  font-size: 1.5em;
+  height: 100%;
+}
+
+article {
+    margin-bottom: 0px;
+    min-height: 180px;
 }
 
 nav > ul {
@@ -26,9 +37,9 @@ nav > ul > li {
     padding-right: 1.5em;
 }
 
-footer {
-   position:fixed;
-   margin-top: 2em;
-   bottom:0;
-   text-align: center;
-}
+#footer {
+    position: relative;
+    margin-top: -180px; /* negative value of footer height */
+    height: 180px;
+    clear:both;
+} 
