--- a/recipe/templates/nav.mustache
+++ b/recipe/templates/nav.mustache
@@ -3,8 +3,8 @@
 </header>
 <nav>
     <ul>
-        <li><a href="index.html">about</a></li>
-        <li><a href="index.html#/page/introduction.md">introduction</a></li>
+        <li><a href="">about</a></li>
+        <li><a href="#/page/introduction.md">introduction</a></li>
         <li><a href="#/blog">blog</a></li>
     </ul>
  </nav>
