corrected footer css glitch

--- a/recipe/templates/index.mustache
+++ b/recipe/templates/index.mustache
@@ -1,6 +1,9 @@
 {{> header }}
 {{> nav }}
-<section id="main">
-</section>
+<div class="wrap">
+  <section id="main">
+    {{{ body }}}
+  </section>
+</div>
 {{> footer }}
 
