--- a/recipe/styles/custom.scss
+++ b/recipe/styles/custom.scss
@@ -10,14 +10,30 @@
     margin-top: 4em;
 }
 
-#main {
-    padding-bottom: 90px;
+html {
+    height: 100%;
 }
 
 body {
+  height: 100%;
   margin:  0px 0px 0px 0px;
   font-size: 1.5em;
-  height: 100%;
+}
+
+#wrap {
+  min-height: 100%;
+}
+
+#main {
+  padding-bottom:150px; /* this needs to be bigger than footer height*/
+}
+
+footer {
+  position: relative;
+  margin-top: -150px; /* negative value of footer height */
+  height: 150px;
+  clear:both;
+  padding-top:20px;
 }
 
 article {
@@ -37,9 +53,3 @@ nav > ul > li {
     padding-right: 1.5em;
 }
 
-#footer {
-    position: relative;
-    margin-top: -180px; /* negative value of footer height */
-    height: 180px;
-    clear:both;
-} 
