--- a/recipe/templates/footer.mustache
+++ b/recipe/templates/footer.mustache
@@ -1,6 +1,8 @@
 <footer>
     <div align="center">
         <a href="{{github_repo}}"><img height="40" src="http://octodex.github.com/images/original.png"/></a>
+        <br/>
+        &copy; All rights reserved. 2013
     </div>
 </footer>
 </body>
