--- a/recipe/templates/index.mustache
+++ b/recipe/templates/index.mustache
@@ -1,9 +1,6 @@
 {{> header }}
 {{> nav }}
 <div class="wrap">
-  <section id="main">
-    {{{ body }}}
-  </section>
+    <section id="main">{{{ body }}}</section>
 </div>
 {{> footer }}
-
