--- a/recipe/templates/index.mustache
+++ b/recipe/templates/index.mustache
@@ -5,6 +5,9 @@
     </head>
 
     <body>
+        <!--[if lt IE 7]>
+            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+        <![endif]-->
         <nav id="main-nav">
             {{> nav }}
             <br class="clear"/>
@@ -25,7 +28,6 @@
     </body>
 
 </html>
-
 
 
 
