--- a/recipe/templates/blog.mustache
+++ b/recipe/templates/blog.mustache
@@ -3,8 +3,10 @@ type: dynamic
 
 ---
 
-{{#posts }}
-    <span class="date"> {{ post_date }}&nbsp;&nbsp;</span>
-    <span><a href="#/{{ name }}"><span class="post-title">{{ title }}</a></span><br/>
-{{/posts}}
+{{#all_posts }}
+   {{#posts}} 
+        <span class="date"> {{ post_date }}&nbsp;&nbsp;</span>
+        <span><a href="#/{{ name }}"><span class="post-title">{{ title }}</a></span><br/>
+    {{/posts}}
+{{/all_posts}}
 
