--- a/recipe/templates/index.mustache
+++ b/recipe/templates/index.mustache
@@ -8,6 +8,9 @@
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
+        <header>
+            <h1><a href="{{ config.github_repo }}">{{ title }}</a></h1>
+        </header>
         <nav id="main-nav">
             {{> nav }}
             <br class="clear"/>
