--- a/recipe/templates/footer.mustache
+++ b/recipe/templates/footer.mustache
@@ -1,6 +1,5 @@
 <div>
-    &copy; Facjure LLC Under the Apache 2.0 License. 2013
-    <a href="{{github_repo}}"><img height="40" src="http://octodex.github.com/images/original.png"/></a>
+    &copy; Facjure LLC, under the Apache 2.0 License. 2013
 </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
