--- a/recipe/templates/nav.mustache
+++ b/recipe/templates/nav.mustache
@@ -1,5 +1,5 @@
 <ul>
-    <li><a href="#/page/introduction.md">introduction</a></li>
+    <li><a href="#/page/about.md">about</a></li>
     <li><a href="#/blog">blog</a></li>
 </ul>
 
