--- a/recipe/templates/nav.mustache
+++ b/recipe/templates/nav.mustache
@@ -1,5 +1,8 @@
 <ul>
-    <li><a href="#/page/about.md">about</a></li>
-    <li><a href="#/blog">blog</a></li>
+    <li><a href="#/page/abstract.md">Abstract</a></li>
+    <li><a href="#/page/spec.md">Spec</a></li>
+    <li><a href="#/page/tech.md">Tech</a></li>
+    <li><a href="#/page/changelog.md">Change Log</a></li>
+    <li><a href="#/blog">Blog</a></li>
 </ul>
 
