basic regex search #34

--- a/recipe/styles/custom.scss
+++ b/recipe/styles/custom.scss
@@ -53,3 +53,12 @@ nav > ul > li {
     padding-right: 1.3em;
 }
 
+#search {
+    display: inline;
+    float: right;
+}
+
+#search input {
+    font-size: 0.9em;
+}
+
