--- a/recipe/templates/nav.mustache
+++ b/recipe/templates/nav.mustache
@@ -3,5 +3,11 @@
     <li><a href="#/page/spec.md">Spec</a></li>
     <li><a href="#/page/changelog.md">Change Log</a></li>
     <li><a href="#/blog">Blog</a></li>
+    <li>
+    <form id="search" action="#/search" method="post">
+        <input type="text" name="query" />
+        <input type="submit" value="Search" />
+    </form>
+    </li>
 </ul>
 
