--- a/recipe/templates/footer.mustache
+++ b/recipe/templates/footer.mustache
@@ -14,7 +14,7 @@
     /* Google Analytics */
     var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
+            g.src='https://www.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
 </script>
 
