--- a/recipe/templates/header.mustache
+++ b/recipe/templates/header.mustache
@@ -1,6 +1,9 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>{{ title }}</title>
+<script type="text/javascript">
+document.write("<base href='" + window.location.href  + "' />");
+</script>
 <meta name="description" content="A minimalist website builder for design and content freedom">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
