--- a/recipe/templates/nav.mustache
+++ b/recipe/templates/nav.mustache
@@ -5,7 +5,7 @@
     <li><a href="#/page/changelog.md">Change Log</a></li>
     <li><a href="#/blog">Blog</a></li>
     <li>
-    <form id="search" action="#/search" method="post">
+    <form id="search" action="#/search" method="get">
         <input type="text" name="query" />
         <input type="submit" value="Search" />
     </form>
