--- a/examples/recipe/templates/index.mustache
+++ b/examples/recipe/templates/index.mustache
@@ -18,7 +18,7 @@
               {{> nav }}
           </nav>
 
-            <article id="main" class="content">
+            <article id="pie" class="content">
                 <!-- Main Content -->
                 {{{ body }}}
             </article>
