--- a/examples/recipe/templates/nav.mustache
+++ b/examples/recipe/templates/nav.mustache
@@ -1,4 +1,5 @@
 <ul>
+    <li><a href="#/page/about.md">About</a></li>
     <li><a href="#/page/changelog.md">Change Log</a></li>
     <li><a href="#/blog">Blog</a></li>
     <li>
