--- a/demos/site-with-blog/templates/index.mustache
+++ b/demos/site-with-blog/templates/index.mustache
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
  <html>
     <head>
-       {{> header }}
+       <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>{{ title }}</title>
+        <script type="text/javascript">
+        document.write("<base href='" + window.location.href  + "' />");
+        </script>
+        <meta name="description" content="A minimalist website builder for design and content freedom">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
+        <style type="text/css">
+            {{{ style_sheet }}}
+        </style>
     </head>
 
     <body>
@@ -26,7 +37,25 @@
         </div>
 
         <footer>
-          {{> footer }}
+          <div>
+            &copy; Facjure LLC, under the Apache 2.0 License. 2013
+          </div>
+
+          <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/sammy.js/0.7.4/sammy.min.js"></script>
+          <script>
+          /* Literatte */
+            var data = {{{ json_data }}};
+            var config = {{{ config }}};
+            /* Custom Script */
+            {{{ script }}}
+            /* Google Analytics */
+            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+                    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+                    g.src='https://www.google-analytics.com/ga.js';
+                    s.parentNode.insertBefore(g,s)}(document,'script'));
+          </script>
         </footer>
 
     </body>
