--- a/demos/site-with-blog/templates/index.mustache
+++ b/demos/site-with-blog/templates/index.mustache
@@ -38,7 +38,7 @@
 
         <footer>
           <div>
-            &copy; Facjure LLC, under the Apache 2.0 License. 2013
+            &copy; Priyatam Mudivarti, under the Apache 2.0 License. 2014
           </div>
 
           <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
